# wifiphisher

./: .editorconfig  .gitignore  .style.yapf  .travis.yml  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README  README.md  Vagrantfile  acc.py  build.py  constants.py  deploy.sh  index.html  phishingpage.py  pre_install.py  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  t.py  tox.ini  wifiphisher.py  wifiscanner  الاحمر*
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml
PyRIC/: LICENSE  MANIFEST.in  README.md  __init__.py  pyw.py  setup.cfg  setup.py
PyRIC/examples/: pentest.py
PyRIC/pyric/: RFI  TODO  __init__.py  channels.py  device.py  pyw.py
access-point-pages/connection_reset/: firefox.css  index.html
access-point-pages/dlink/: index.html  menu.html  stylemain.css
access-point-pages/minimal/: Thumbs.db  index.html  index1.html  style.css
cert/: server.pem
config/: config.ini
devops/: boot.sh  development  setup.yml
docs/: Makefile  api.rst  code_req.rst  conf.py  contribute.rst  custom_phishing_scenario.rst  extensions.rst  faq.rst  getting_started.rst  index.rst  modules.rst  opmodes.rst  phishing_scenarios.rst  pull_request.rst  templates.rst  users_guide.rst  wifiphisher.txt
lib/: fakeAP.py  wifijammer.py
phishing-pages/minimal/: index.html  (+1 more)
tests/: test_deauth.py  test_dependencies.py  test_extensions.py  test_firewall.py  test_interfaces.py  test_lure10.py  test_macmatcher.py  test_phishingpage.py  test_victims.py
wifiphisher/: constants.py  deauth.py  firewall.py  interfaces.py  macmatcher.py  phishinghttp.py  phishingpage.py  pywifiphisher.py  recon.py  shutdown.py
(+200 files in other folders)
