[build-system]
requires = [
    "hatchling",
    "setuptools>=61.0",
    "wheel"
]
build-backend = "hatchling.build"

[project]
name = "wifiphisher"
version = "1.4"
description = "Automated phishing attacks against WiFi networks"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"
authors = [
    {name = "Wifiphisher Project", email = "info@wifiphisher.org"},
]
keywords = ["wifi", "wireless", "security", "phishing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "scapy>=2.4.3",
    "PyRIC>=0.1.6.3",
    "tornado>=6.0.3",
    "dbus-python>=1.2.16",
    "pbkdf2>=1.3",
    "roguehostapd==1.1.2",
    "pyric>=0.1.6.3",
    "distro>=1.7.0",
    "setuptools>=61.0",
]

[project.urls]
Homepage = "https://wifiphisher.org"
Documentation = "https://wifiphisher.readthedocs.io/"
Repository = "https://github.com/wifiphisher/wifiphisher.git"
Issues = "https://github.com/wifiphisher/wifiphisher/issues"

[project.scripts]
wifiphisher = "wifiphisher.pywifiphisher:run"

[tool.hatch.build]
include = [
    "wifiphisher/**/*.py",
    "wifiphisher/data/**/*",
    "pre_install.py",
    "build.py"
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
]

[tool.hatch.build.hooks.custom]
path = "build.py" 